[package]
name = "xmas-tree-recycling"
version = "0.1.0"
authors = ["Sylvain Wallez <sylvain@bluxte.net>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

elasticsearch = "7.10.0-alpha.1"

# Tokio & Reqwest: use the versions brought by elasticsearch
tokio = { version = "*", features = ["macros"] }
reqwest = "*"

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
